# hw02wildcatshawkeyes

./: .gitignore  Cargo.toml  README.md  malwaredatadownload.sh  multiclass_impl.sh  pyproject.toml
scripts/: binaryclassification_animate_impl.py  binaryclassification_animate_impl.py.py  multiclass_eval.py  multiclass_impl.py
src/: lib.rs
src/hw02wildcatshawkeyes/: __init__.py
src/hw02wildcatshawkeyes/animation/: __init__.py  largewt_animation.py  largewt_animation.py.py  weight_animation.py  weight_animation.py.py
src/hw02wildcatshawkeyes/deepl/: __init__.py  multiclass.py  two_layer_binary_classification.py  two_layer_binary_classification.py.py
