[project]
name = "hw02wildcatshawkeyes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "wildcatshawkeyesgh", email = "wildcatshawkeyesgh@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "manim>=0.19.2",
    "matplotlib>=3.10.8",
    "numpy>=2.4.2",
    "pandas>=3.0.0",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
]

[tool.maturin]
module-name = "hw02wildcatshawkeyes._core"
python-packages = ["hw02wildcatshawkeyes"]
python-source = "src"

[tool.uv]
cache-keys = [{ file = "pyproject.toml" }, { file = "src/**/*.rs" }, { file = "Cargo.toml" }, { file = "Cargo.lock" }]

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"
